Fixed overflow in publications list

--- a/css/styles.css
+++ b/css/styles.css
@@ -166,6 +166,10 @@ body {
   padding: 6rem 1rem 2rem;
 }
 
+.publications-container {
+  overflow: auto;
+}
+
 /* Container for flex items (for example, half width) */
 .flex-row {
   display: flex;
